[tool.poetry]
name = "storage prices over time"
version = "0.1.0"
description = ""
authors = ["mbledkowski <pub@mble.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
prophet = "^1.1.5"
pandas = "^2.1.3"
optuna-fast-fanova = "^0.0.4"
gunicorn = "^21.2.0"
timeout-decorator = "^0.5.0"
numpy = "^1.26.2"
scipy = "^1.11.4"

[tool.pyright]
typeCheckingMode = "off"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
